syntax = "proto3";

option go_package = "./pb";

package pb;

message WorkReq {
}

message WorkResp {
}

service Worker {
  rpc work(WorkReq) returns (WorkResp);
}